@@ -148,3 +148,12 @@ key "mykey" {
 	algorithm "hmac-md5";
 	secret "qwertyuiopasdfgh";
 };
+dyndb "name" "library.so" {
+        this;
+        \};
+        is a {
+                "test" { \{ of; the; };
+        } bracketed;
+        "text \"";
+        system;
+};
