@@ -11,6 +11,11 @@
 			interoperation with ECS clients have been
 			included in this security release.  The full
 			fix is included in BIND 9.10.5.
+4444.	[bug]		Fixed some issues related to dyndb: A bug caused
+			braces to be omitted when passing configuration text
+			from named.conf to a dyndb driver, and there was a
+			use-after-free in the sample dyndb driver. [RT #43050]
+
 
 4467.	[security]	It was possible to trigger a assertion when rendering
 			a message. (CVE-2016-2776) [RT #43139]
